--- a/proyecto_final/index.html
+++ b/proyecto_final/index.html
@@ -175,9 +175,9 @@
                     </div>
                     <div class="box-footer">
                         <h2>Redes Sociales</h2>
-                        <a href="#"> <i class="fab fa-youtube-square"></i> Youtube</a>
-                        <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-                        <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+                        <a href="https://www.youtube.com"> <i class="fab fa-youtube-square"></i> Youtube</a>
+                        <a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i> Facebook</a>
+                        <a href="https://www.instagram.com"><i class="fab fa-instagram-square"></i> Instagram</a>
                     </div>
                 </div>
                 <div class="box-copyright">
