--- a/proyecto_final/index.html
+++ b/proyecto_final/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <main>
-            <!-- BOTON DE IR ARRIBA JAVASCRIPT --> 
+            <!-- BOTON IR ARRIBA JAVASCRIPT -->
             <a class="ir-arriba" javascript:void(0) title="volver arriba">
                 <span class="fa-stack">
                     <i class="fa fa-circle fa-stack-2x"></i>
